cs3411/prog5/p5/output
Alan Shepard

no compilation errors
executing

Two constructed
hello world
normal termination
Donald Knuth

no compilation errors
Multiple main detected, terminating.
D.nocompile

did not compile
     Two.java:5: error: cannot find symbol
         ublic Two() {
         ^
       symbol:   class ublic
       location: class Two
     1 error
D.nofiles

no .java file(s) submitted
D.nomain

no compilation errors
no main in any class, can't execute
George Washington, Abraham Lincoln, Thomas Jefferson, Theodore Roosevelt

no compilation errors
executing

here's some output
Exception in thread "main" java.lang.NullPointerException
	at One.main(One.java:15)
abnormal termination
Alan Shepard

no .java file(s) submitted
p5/D.nofiles

no .java file(s) submitted
p5/D.runtimerror

no .java file(s) submitted
